2005-08-25  Mike Kestner  <mkestner@novell.com>

	* sample/GtkDemo/DemoIconView.cs : remove some C# 2.0-isms.

2005-08-23  Ben Maurer  <bmaurer@novell.com>

	* glib/Object.cs: Escape names and ensure stuff is unique.

2005-08-23  Joe Shaw  <joeshaw@novell.com>

	* generator/SymbolTable.cs: Add "unsigned" as a type
	which maps to "uint".

	* parser/gapi2xml.pl: Handle "type const *" return types
	as well.  I think this is all of them!

2005-08-23  Joe Shaw  <joeshaw@novell.com>

	* parser/gapi2xml.pl: Fix a cut-and-paste error in handling
	"type const *" fields.

2005-08-23  Mike Kestner  <mkestner@novell.com>

	* parser/gapi2xml.pl : handle foo const * fields.
	* gnome/gnome-api-2.10.raw : regen.

2005-08-23  Mike Kestner  <mkestner@novell.com>

	* bootstrap-for-the-insane : restore the message of doom that was
	removed during the "bootstrap-generic" reorganization.

2005-08-22  Joe Shaw  <joeshaw@novell.com>

	* parser/gapi2xml.pl: Fix a minor bug handling "type const *"
	parameters.

2005-08-22  Ben Maurer  <bmaurer@novell.com>

	* gtk/TreeNode.cs: Add Interlocked.Increment rather than ++. This
	makes it safe to create tree nodes in a worker thread as long as
	you reparent them into the tree with another thread. Thanks to mk
	for allowing a bit of threadedness in :-).
	
	* gtk/NodeView.cs: Fix leak here. r=mkestner

2005-08-22  Mike Kestner  <mkestner@novell.com>

	* parser/gapi2xml.pl : handle "type const *" parameters.
	* gdk/gdk-api-2.8.raw : regened probably from one of danw's parser
	fixes.  [Fixes #75844]

2005-08-22  Dan Winship  <danw@novell.com>

	* generator/Property.cs (Generate): Mark properties [Obsolete] if
	they or their accessors are marked deprecated. (Affects
	Gtk.Entry.Editable, Gtk.FontSelection.Font,
	Gtk.Notebook.*TabBorder, Gtk.Object.UserData, and a bunch of old
	Gtk.ProgressBar properties).

	* gtk/Gtk.metadata: Hide Entry.Editable. Mark Notebook.Homogeneous
	deprecated.

	* gtk/Entry.custom: Implement Editable property with an Obsolete