@@ -1,6 +1,9 @@
 2005-08-25  Mike Kestner  <mkestner@novell.com>
 
-	* sample/GtkDemo/DemoIconView.cs : remove some C# 2.0-isms.
+	* sample/GtkDemo/DemoIconView.cs : remove C# 2.0-isms.
+	* sample/opaquetest/OpaqueTest.cs : remove C# 2.0-isms.
+	* sample/valuetest/ValueTest.cs : remove C# 2.0-isms.
+	* sample/PolarFixed.cs : remove C# 2.0-isms.
 
 2005-08-23  Ben Maurer  <bmaurer@novell.com>
 
